@@ -61,7 +61,7 @@ __PACKAGE__->table('tol_sample_bioproject');
 =head2 library_type
 
   data_type: 'enum'
-  extra: {list => ['Chromium genome','Haplotagging','Hi-C','Hi-C - Arima v1','Hi-C - Arima v2','Hi-C - Dovetail','Hi-C - Omni-C','Hi-C - Qiagen','PacBio - CLR','PacBio - HiFi','ONT','RNA PolyA','RNA-seq dUTP eukaryotic','Standard','unknown','HiSeqX PCR free','PacBio - HiFi (ULI)','PacBio - IsoSeq','ATAC-seq']}
+  extra: {list => ['Chromium genome','Haplotagging','Hi-C','Hi-C - Arima v1','Hi-C - Arima v2','Hi-C - Dovetail','Hi-C - Omni-C','Hi-C - Qiagen','PacBio - CLR','PacBio - HiFi','ONT','RNA PolyA','RNA-seq dUTP eukaryotic','Standard','unknown','HiSeqX PCR free','PacBio - HiFi (ULI)','PacBio - IsoSeq','ATAC-seq','PacBio - HiFi (PiMmS)']}
   is_nullable: 1
 
 =head2 tolid
@@ -145,6 +145,7 @@ __PACKAGE__->add_columns(
         'PacBio - HiFi (ULI)',
         'PacBio - IsoSeq',
         'ATAC-seq',
+        'PacBio - HiFi (PiMmS)',
       ],
     },
     is_nullable => 1,
@@ -222,8 +223,8 @@ __PACKAGE__->belongs_to(
 );
 
 
-# Created by DBIx::Class::Schema::Loader v0.07052 @ 2024-10-09 15:42:26
-# DO NOT MODIFY THIS OR ANYTHING ABOVE! md5sum:P7s1muBNrElt8Hd3xqTL3w
+# Created by DBIx::Class::Schema::Loader v0.07052 @ 2025-03-31 14:29:19
+# DO NOT MODIFY THIS OR ANYTHING ABOVE! md5sum:f0vkprUgm/IZssygOBfOUw
 
 our $VERSION = '0';
 
