@@ -1,6 +1,9 @@
 LIST OF CHANGES
 ---------------
 
+ - Change iseq_product_metrics tag_decode_count from int to bigint to support
+   values greater than 4294967295 and bring other tables up to date.
+  
 release 6.37.0 (2025-03-10)
  - Added 'lane_released' column to the existing iseq_run_lane_metrics table
    to capture the date of lane release.
